--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "axios": "^1.12.2",
+    "numeral": "^2.0.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-responsive-carousel": "^3.2.23"
