--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "homepage": "https:///Elenitadese.github.io/Amazon-Clone.git",
+  "homepage": "https://elenitadese.github.io/Amazon-Clone/",
+
   "name": "amazon-clone",
   "private": true,
   "version": "0.0.0",
